apps/withjoy-exporter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: withjoy-exporter
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
