apps/withjoy-exporter/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: withjoy-exporter
  namespace: withjoy-exporter
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - withjoy-exporter.${DOMAIN}
  rules:
    - backendRefs:
        - name: withjoy-exporter-web
          port: 8080
